# mpkz

./: Cargo.toml  README.md  example.py  mpkz.pyi  pyproject.toml
.github/workflows/: wheels.yml
src/: lib.rs
tests/: test_all.py
